--- a/ecom-hotel-app-backend/src/main/resources/application.yml
+++ b/ecom-hotel-app-backend/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
       max-file-size: 5MB
       max-request-size: 5MB
       file-size-threshold: 2KB
+  logging:
+    level:
+      org.springframework.data.jpa: DEBUG
+      org.hibernate: DEBUG
 
 
 server:
