--- a/ecom-hotel-app-backend/src/main/resources/application.yml
+++ b/ecom-hotel-app-backend/src/main/resources/application.yml
@@ -3,6 +3,12 @@ spring:
     url: jdbc:mysql://127.0.0.1:3303/ecom_db
     password: runningman
     username: root
+
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  main:
+    allow-bean-definition-overriding: true
   jpa:
     database-platform: org.hibernate.dialect.MySQL8InnoDBDialect
     generate-ddl: true
@@ -27,3 +33,4 @@ spring:
 
 server:
   port: 8066
+
