--- a/ecom-hotel-app-backend/pom.xml
+++ b/ecom-hotel-app-backend/pom.xml
@@ -43,11 +43,11 @@
             <scope>provided</scope>
         </dependency>
 <!--         https://mvnrepository.com/artifact/org.springframework.security.oauth.boot/spring-security-oauth2-autoconfigure-->
-<!--        		<dependency>-->
-<!--        			<groupId>org.springframework.security.oauth.boot</groupId>-->
-<!--        			<artifactId>spring-security-oauth2-autoconfigure</artifactId>-->
-<!--        			<version>2.6.8</version>-->
-<!--        		</dependency>-->
+        		<dependency>
+        			<groupId>org.springframework.security.oauth.boot</groupId>
+        			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        			<version>2.6.8</version>
+        		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -57,15 +57,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.auth0</groupId>-->
-<!--            <artifactId>java-jwt</artifactId>-->
-<!--            <version>4.4.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
