--- a/ecom-hotel-app-backend/src/main/resources/application.yml
+++ b/ecom-hotel-app-backend/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       matching-strategy: ant_path_matcher
   main:
     allow-bean-definition-overriding: true
+    allow-circular-references: true
   jpa:
     database-platform: org.hibernate.dialect.MySQL8InnoDBDialect
     generate-ddl: true
@@ -22,14 +23,17 @@ spring:
         format_sql: true
   servlet:
     multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
+      enabled: true
+      max-file-size: 1000MB
+      max-request-size: 1000MB
       file-size-threshold: 2KB
   logging:
     level:
       org.springframework.data.jpa: DEBUG
       org.hibernate: DEBUG
 
+jwt:
+  secret: secret
 
 server:
   port: 8066
